--- a/assets/css/activation.scss
+++ b/assets/css/activation.scss
@@ -14,7 +14,7 @@
 div.twitchpress-message {
     overflow: hidden;
     position: relative;
-    border-left-color: #1ca50e !important;
+    border-left-color: #472F75 !important;
     p {
         max-width: 700px;
     }
@@ -23,18 +23,18 @@ div.twitchpress-message {
 p.twitchpress-actions,
 .twitchpress-message {
     a.button-primary {
-        background: #1ca50e;
-        border-color: #138008;
-        -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.25), 0 1px 0 #138008;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,.25), 0 1px 0 #138008;
+        background: #472F75;
+        border-color: #472F75;
+        -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.25), 0 1px 0 #472F75;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,.25), 0 1px 0 #472F75;
         color: #fff;
-        text-shadow: 0px -1px 1px #138008, 1px 0px 1px #138008, 0px 1px 1px #138008, -1px 0px 1px #138008;
+        text-shadow: 0px -1px 1px #472F75, 1px 0px 1px #472F75, 0px 1px 1px #472F75, -1px 0px 1px #472F75;
 
         &:hover, &:focus, &:active {
-            background: #138008;
-            border-color: #138008;
-            -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.25), 0 1px 0 #138008;
-            box-shadow: inset 0 1px 0 rgba(255,255,255,.25), 0 1px 0 #138008;
+            background: #472F75;
+            border-color: #472F75;
+            -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.25), 0 1px 0 #472F75;
+            box-shadow: inset 0 1px 0 rgba(255,255,255,.25), 0 1px 0 #472F75;
         }
     }
 
